# src/api/services/file-server.service.ts
@@ -35,9 +35,9 @@ export class FileServerService extends BaseService {
   getFileFromFileServer$Response(params: {
     fileName: string;
   },
-  context?: HttpContext
+    context?: HttpContext
 
-): Observable<StrictHttpResponse<Blob>> {
+  ): Observable<StrictHttpResponse<Blob>> {
 
     const rb = new RequestBuilder(this.rootUrl, FileServerService.GetFileFromFileServerPath, 'get');
     if (params) {
@@ -65,12 +65,77 @@ export class FileServerService extends BaseService {
   getFileFromFileServer(params: {
     fileName: string;
   },
-  context?: HttpContext
+    context?: HttpContext
 
-): Observable<Blob> {
+  ): Observable<Blob> {
 
-    return this.getFileFromFileServer$Response(params,context).pipe(
+    return this.getFileFromFileServer$Response(params, context).pipe(
       map((r: StrictHttpResponse<Blob>) => r.body as Blob)
+    );
+  }
+
+  /**
+   * Path part for operation getProfilePictures
+   */
+  static readonly GetProfilePicturesPath = '/file-server/profile-pictures';
+
+  /**
+   * This method provides access to the full `HttpResponse`, allowing access to response headers.
+   * To access only the response body, use `getProfilePictures()` instead.
+   *
+   * This method doesn't expect any request body.
+   */
+  getProfilePictures$Response(params?: {
+  },
+    context?: HttpContext
+
+  ): Observable<StrictHttpResponse<{
+    'userId'?: number;
+    'profilePicture'?: Blob;
+  }>> {
+
+    const rb = new RequestBuilder(this.rootUrl, FileServerService.GetProfilePicturesPath, 'post');
+    if (params) {
+    }
+
+    return this.http.request(rb.build({
+      responseType: 'json',
+      accept: 'application/json',
+      context: context
+    })).pipe(
+      filter((r: any) => r instanceof HttpResponse),
+      map((r: HttpResponse<any>) => {
+        return r as StrictHttpResponse<{
+          'userId'?: number;
+          'profilePicture'?: Blob;
+        }>;
+      })
+    );
+  }
+
+  /**
+   * This method provides access only to the response body.
+   * To access the full response (for headers, for example), `getProfilePictures$Response()` instead.
+   *
+   * This method doesn't expect any request body.
+   */
+  getProfilePictures(params?: {
+  },
+    context?: HttpContext
+
+  ): Observable<{
+    'userId'?: number;
+    'profilePicture'?: Blob;
+  }> {
+
+    return this.getProfilePictures$Response(params, context).pipe(
+      map((r: StrictHttpResponse<{
+        'userId'?: number;
+        'profilePicture'?: Blob;
+      }>) => r.body as {
+        'userId'?: number;
+        'profilePicture'?: Blob;
+      })
     );
   }
 
